@startuml

entity users {
    *id : UUID [PK]
    *email : VARCHAR(255) [UNIQUE]
    *password : VARCHAR(255)
    *name : VARCHAR(255)
    last_name : VARCHAR(255)
    *role : VARCHAR(32)
    address : VARCHAR(255)
    *birth_date : DATE
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

entity wallet {
    *id : UUID [PK]
    *owner_id : UUID [FK -> users.id] [UNIQUE]
    *currency : CHAR(3)
    *balance : DECIMAL(10,2)
    *payment_info : VARCHAR(255)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

entity category {
    *id : UUID [PK]
    *name : VARCHAR(64) [UNIQUE]
    description : VARCHAR(255)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

entity item {
    *id : UUID [PK]
    *category_id : UUID [FK -> category.id]
    *seller_id : UUID [FK -> users.id]
    *payment_type : VARCHAR(32)
    *name : VARCHAR(255)
    description : VARCHAR(255)
    *condition : VARCHAR(32)
    *status : VARCHAR(32)
    *price : DECIMAL(10,2)
    *currency : CHAR(3)
    media_path : VARCHAR(255)
    *version : INT
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

entity auction {
    *id : UUID [PK]
    *item_id : UUID [FK -> item.id]
    *initial_bid_price : DECIMAL(8,2)
    *min_bid_step : DECIMAL(8,2)
    *status : VARCHAR(32)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
    *finished_at : TIMESTAMP
}

entity bid {
    *id : UUID [PK]
    *auction_id : UUID [FK -> auction.id]
    *user_id : UUID [FK -> users.id]
    *status : VARCHAR(32)
    *price : DECIMAL(8,2)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

entity payment {
    *id : UUID [PK]
    *wallet_id : UUID [FK -> wallet.id]
    *amount : DECIMAL(8,2)
    *currency : CHAR(3)
    *type : VARCHAR(32)
    *status : VARCHAR(32)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

entity orders {
    *id : UUID [PK]
    *user_id : UUID [FK -> users.id]
    *payment_id : UUID [FK -> payment.id]
    *item_id : UUID [FK -> item.id]
    *status : VARCHAR(32)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
    *expire_at : TIMESTAMP
}

entity bid_hold_balance {
    *id : UUID [PK]
    *wallet_id : UUID [FK -> wallet.id]
    *auction_id : UUID [FK -> auction.id]
    *bid_id : UUID
    *amount : DECIMAL(8,2)
    *currency : VARCHAR(255)
    *status : VARCHAR(32)
    *created_at : TIMESTAMP [DEFAULT NOW()]
    *updated_at : TIMESTAMP [DEFAULT NOW()]
}

users ||--|{ wallet : owns
users ||--o{ item : sells
users ||--o{ auction : auctions
users ||--o{ bid : bids
users ||--o{ orders : places
wallet ||--o{ payment : payments
wallet ||--o{ bid_hold_balance : holds
category ||--o{ item : categorizes
item ||--o{ auction : auctioned
item ||--o{ orders : ordered
auction ||--o{ bid : receives
auction ||--o{ bid_hold_balance : holds
payment ||--o{ orders : used_in

@enduml
